[gd_scene load_steps=14 format=3 uid="uid://c662dh8tjeeus"]

[ext_resource type="Texture2D" uid="uid://wocee4cj4irb" path="res://assets/pacman-background.jpg" id="1_dlsat"]
[ext_resource type="Script" path="res://mainscreen.gd" id="1_s7iun"]
[ext_resource type="Texture2D" uid="uid://bsodc8uyiubpa" path="res://assets/grass.png" id="2_40o75"]
[ext_resource type="Texture2D" uid="uid://cq7fy2ypcs2oq" path="res://assets/wall.png" id="3_cqwdp"]
[ext_resource type="PackedScene" uid="uid://b8ki7i5yvs7sy" path="res://ghost.tscn" id="4_3t1wt"]
[ext_resource type="Texture2D" uid="uid://bcn5et0purvlo" path="res://assets/map.png" id="5_bxmpt"]
[ext_resource type="PackedScene" uid="uid://cfc2sd5i7b4oi" path="res://cheese.tscn" id="6_vf11b"]
[ext_resource type="PackedScene" uid="uid://dsripr4tc844y" path="res://pacman.tscn" id="7_epngo"]
[ext_resource type="Texture2D" uid="uid://bxkmcnaof87ic" path="res://assets/victory.jpg" id="9_bp6hj"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_m738q"]
vertices = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lj8u5"]
texture = ExtResource("2_40o75")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_m738q")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbaei"]
texture = ExtResource("3_cqwdp")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_dqb28"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_lj8u5")
sources/1 = SubResource("TileSetAtlasSource_tbaei")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s7iun")

[node name="Pacman-background" type="Sprite2D" parent="."]
visible = false
position = Vector2(476, 553)
scale = Vector2(1.4714, 1.49099)
texture = ExtResource("1_dlsat")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_dqb28")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1376256, 1, 0, 1441792, 1, 0, 1507328, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1638401, 1, 0, 1703937, 1, 0, 1703936, 1, 0, 1638400, 1, 0, 1769472, 1, 0, 1835008, 1, 0, 1900544, 1, 0, 1900545, 1, 0, 1966081, 1, 0, 1966080, 1, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1900564, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 1, 0, 1966110, 1, 0, 1966103, 0, 0, 1966102, 0, 0, 1966101, 0, 0, 1966100, 0, 0, 65566, 1, 0, 131102, 1, 0, 196638, 1, 0, 262174, 1, 0, 327710, 1, 0, 393246, 1, 0, 458782, 1, 0, 524318, 1, 0, 589854, 1, 0, 655390, 1, 0, 720926, 1, 0, 786462, 1, 0, 786461, 1, 0, 851997, 1, 0, 917533, 1, 0, 983069, 1, 0, 1048605, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1179678, 1, 0, 1245214, 1, 0, 1310750, 1, 0, 1376286, 1, 0, 1441822, 1, 0, 1507358, 1, 0, 1572894, 1, 0, 1638430, 1, 0, 1703966, 1, 0, 1769502, 1, 0, 1835038, 1, 0, 1900574, 1, 0, 851998, 1, 0, 917534, 1, 0, 983070, 1, 0, 1048606, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 0, 0, 196616, 0, 0, 196617, 1, 0, 262153, 1, 0, 262154, 1, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 1, 0, 720906, 0, 0, 262147, 0, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 327686, 0, 0, 327687, 0, 0, 262151, 0, 0, 262152, 0, 0, 327688, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 1245190, 1, 0, 1245191, 0, 0, 1245192, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1376270, 0, 0, 1441806, 0, 0, 1507342, 0, 0, 1572877, 0, 0, 1572876, 0, 0, 1572875, 0, 0, 1572874, 0, 0, 1572873, 0, 0, 1572872, 0, 0, 1638408, 0, 0, 1638409, 1, 0, 1638410, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1441804, 1, 0, 1441805, 0, 0, 1376269, 0, 0, 1507341, 0, 0, 1376268, 0, 0, 1376267, 0, 0, 1376266, 0, 0, 1376265, 0, 0, 1376264, 0, 0, 1310728, 0, 0, 1310727, 0, 0, 1310726, 0, 0, 1245193, 1, 0, 917516, 1, 0, 983052, 1, 0, 1048588, 1, 0, 1114124, 0, 0, 1114125, 0, 0, 1048589, 1, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 1, 0, 1048598, 0, 0, 1048599, 0, 0, 983063, 0, 0, 917527, 0, 0, 851991, 0, 0, 786455, 0, 0, 786454, 0, 0, 786453, 1, 0, 786452, 0, 0, 786451, 0, 0, 786450, 0, 0, 786449, 0, 0, 786448, 0, 0, 786447, 0, 0, 786446, 0, 0, 983053, 0, 0, 917517, 0, 0, 917518, 0, 0, 851982, 1, 0, 983062, 0, 0, 983061, 0, 0, 983060, 0, 0, 983059, 0, 0, 983058, 1, 0, 983057, 0, 0, 983056, 0, 0, 983055, 0, 0, 983054, 0, 0, 917519, 0, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 0, 0, 851988, 0, 0, 851989, 1, 0, 851990, 0, 0, 917526, 0, 0, 917525, 0, 0, 917524, 0, 0, 917523, 0, 0, 917522, 1, 0, 917521, 0, 0, 917520, 0, 0, 196630, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 1, 0, 327704, 0, 0, 327705, 0, 0, 262169, 1, 0, 196633, 1, 0, 196632, 1, 0, 196631, 0, 0, 327702, 0, 0, 327703, 0, 0, 131073, 1, 0, 65537, 1, 0, 65538, 0, 0, 131074, 0, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 917505, 1, 0, 983041, 1, 0, 1048577, 1, 0, 1114113, 1, 0, 1179649, 1, 0, 1245185, 1, 0, 1310721, 1, 0, 1376257, 1, 0, 1441793, 1, 0, 1507329, 1, 0, 1769473, 1, 0, 1835009, 1, 0, 1900546, 0, 0, 1900547, 0, 0, 1900548, 0, 0, 1835012, 1, 0, 1835013, 1, 0, 1900549, 0, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0, 1900555, 0, 0, 1900556, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 0, 0, 1900561, 0, 0, 1900562, 0, 0, 1900563, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 1, 0, 1835037, 1, 0, 1835036, 0, 0, 1835035, 0, 0, 1835034, 1, 0, 1835033, 1, 0, 1835032, 1, 0, 1835031, 1, 0, 1835030, 1, 0, 1835029, 1, 0, 1835028, 1, 0, 1835027, 1, 0, 1835026, 1, 0, 1835025, 0, 0, 1835024, 0, 0, 1835023, 1, 0, 1835022, 0, 0, 1835021, 0, 0, 1835020, 1, 0, 1835019, 1, 0, 1835018, 1, 0, 1835017, 1, 0, 1835016, 1, 0, 1835015, 1, 0, 1835014, 1, 0, 1835011, 0, 0, 1835010, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 1, 0, 720898, 0, 0, 786434, 0, 0, 851970, 1, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 1, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 1, 0, 1310722, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 1507330, 0, 0, 1572866, 0, 0, 1638402, 1, 0, 1703938, 0, 0, 1769474, 0, 0, 1769475, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 1, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769487, 1, 0, 1769488, 0, 0, 1769489, 0, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 1, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 1, 0, 1703965, 1, 0, 1703964, 0, 0, 1703963, 0, 0, 1703962, 0, 0, 1703961, 0, 0, 1703960, 0, 0, 1703959, 0, 0, 1703958, 0, 0, 1703957, 1, 0, 1703956, 0, 0, 1703955, 0, 0, 1703954, 0, 0, 1703953, 0, 0, 1703952, 0, 0, 1703951, 1, 0, 1703950, 0, 0, 1703949, 0, 0, 1703948, 0, 0, 1703947, 0, 0, 1703946, 0, 0, 1703945, 1, 0, 1703944, 0, 0, 1703943, 0, 0, 1703942, 0, 0, 1703941, 0, 0, 1703940, 0, 0, 1703939, 0, 0, 1638403, 1, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 1, 0, 1638407, 0, 0, 196624, 0, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 1, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 1, 0, 131101, 1, 0, 131100, 0, 0, 131099, 0, 0, 131098, 0, 0, 131097, 0, 0, 131096, 0, 0, 131095, 0, 0, 131094, 0, 0, 131093, 0, 0, 131092, 0, 0, 131091, 0, 0, 131090, 0, 0, 131089, 0, 0, 131088, 0, 0, 131087, 1, 0, 131086, 0, 0, 131085, 0, 0, 131084, 0, 0, 131083, 0, 0, 131082, 0, 0, 131081, 0, 0, 131080, 0, 0, 131079, 0, 0, 131078, 0, 0, 131077, 0, 0, 131076, 0, 0, 131075, 0, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 0, 0, 196622, 0, 0, 196623, 1, 0, 196625, 0, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 262165, 1, 0, 262164, 1, 0, 262163, 1, 0, 262162, 1, 0, 262161, 0, 0, 262160, 0, 0, 262159, 1, 0, 262158, 0, 0, 262157, 0, 0, 262156, 1, 0, 262155, 1, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 393237, 0, 0, 393236, 0, 0, 393235, 0, 0, 393234, 0, 0, 393233, 0, 0, 393232, 0, 0, 393231, 0, 0, 393230, 0, 0, 393229, 0, 0, 393228, 0, 0, 393227, 0, 0, 196634, 1, 0, 262170, 1, 0, 327706, 0, 0, 393242, 0, 0, 458778, 1, 0, 524314, 0, 0, 589850, 0, 0, 655386, 1, 0, 720922, 0, 0, 786458, 0, 0, 851994, 1, 0, 851995, 1, 0, 786459, 0, 0, 720923, 0, 0, 655387, 1, 0, 589851, 0, 0, 524315, 0, 0, 458779, 0, 0, 393243, 0, 0, 327707, 0, 0, 262171, 0, 0, 196635, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 1, 0, 720924, 0, 0, 786460, 0, 0, 851996, 1, 0, 196637, 1, 0, 262173, 1, 0, 327709, 1, 0, 393245, 1, 0, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 458763, 0, 0, 458764, 1, 0, 458765, 1, 0, 458769, 1, 0, 458775, 0, 0, 458776, 1, 0, 458777, 1, 0, 458774, 0, 0, 458773, 1, 0, 458772, 0, 0, 458770, 1, 0, 524306, 0, 0, 524305, 0, 0, 589838, 0, 0, 589839, 1, 0, 589840, 0, 0, 524307, 0, 0, 524308, 0, 0, 589845, 1, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 524299, 0, 0, 524300, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 720910, 0, 0, 655374, 0, 0, 655375, 1, 0, 589841, 0, 0, 524304, 0, 0, 524303, 1, 0, 524302, 0, 0, 524301, 0, 0, 524309, 1, 0, 524310, 0, 0, 524311, 0, 0, 589844, 0, 0, 589843, 0, 0, 589842, 0, 0, 655381, 1, 0, 655380, 1, 0, 655379, 1, 0, 655378, 1, 0, 655377, 0, 0, 655376, 0, 0, 720912, 0, 0, 720911, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 1, 0, 720918, 0, 0, 720919, 0, 0, 720920, 1, 0, 720921, 0, 0, 786457, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 1, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 1, 0, 1048585, 1, 0, 1114122, 0, 0, 1114123, 0, 0, 1048587, 0, 0, 983051, 0, 0, 917515, 0, 0, 851979, 0, 0, 786443, 0, 0, 720907, 0, 0, 655371, 1, 0, 589835, 0, 0, 589836, 0, 0, 655372, 1, 0, 720908, 0, 0, 786444, 0, 0, 851980, 1, 0, 851981, 1, 0, 786445, 0, 0, 786442, 0, 0, 786441, 1, 0, 786440, 0, 0, 786439, 0, 0, 786438, 1, 0, 786437, 0, 0, 786436, 0, 0, 786435, 0, 0, 720899, 0, 0, 655363, 1, 0, 589827, 0, 0, 524291, 0, 0, 458755, 0, 0, 393219, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 393221, 0, 0, 393220, 0, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 393222, 0, 0, 393223, 0, 0, 458759, 0, 0, 458760, 0, 0, 393224, 0, 0, 524296, 0, 0, 524295, 0, 0, 524294, 0, 0, 524293, 0, 0, 589829, 0, 0, 589828, 0, 0, 589830, 0, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 720904, 0, 0, 851976, 0, 0, 851975, 0, 0, 917511, 0, 0, 917512, 0, 0, 983048, 0, 0, 983049, 0, 0, 1048584, 0, 0, 1048586, 0, 0, 983050, 0, 0, 917513, 0, 0, 917514, 0, 0, 851978, 0, 0, 851977, 1, 0, 917510, 0, 0, 851974, 1, 0, 917509, 0, 0, 720903, 0, 0, 720902, 1, 0, 589832, 0, 0, 589831, 0, 0, 655364, 1, 0, 524292, 0, 0, 655365, 1, 0, 720901, 0, 0, 720900, 0, 0, 851971, 1, 0, 851972, 1, 0, 917507, 0, 0, 851973, 1, 0, 917508, 0, 0, 983043, 0, 0, 983044, 0, 0, 1048579, 1, 0, 1048580, 1, 0, 983045, 0, 0, 1048581, 1, 0, 983046, 0, 0, 983047, 0, 0, 1048582, 1, 0, 1048583, 0, 0, 1179654, 1, 0, 1179653, 0, 0, 1179652, 0, 0, 1179651, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 1, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 1, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 1, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 1, 0, 1114139, 0, 0, 1114140, 0, 0, 1114138, 0, 0, 1114137, 0, 0, 1114136, 1, 0, 1114135, 0, 0, 1114129, 0, 0, 1114128, 0, 0, 1114127, 0, 0, 1114126, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 1, 0, 1114134, 0, 0, 1048600, 1, 0, 983064, 0, 0, 917528, 0, 0, 851992, 1, 0, 786456, 1, 0, 851993, 1, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 983068, 0, 0, 917532, 0, 0, 917531, 0, 0, 917530, 0, 0, 983066, 0, 0, 983067, 0, 0, 655384, 1, 0, 655383, 0, 0, 655382, 0, 0, 655385, 1, 0, 589849, 0, 0, 524312, 0, 0, 524313, 0, 0, 1245200, 1, 0, 1310736, 0, 0, 1376272, 0, 0, 1441808, 0, 0, 1507345, 0, 0, 1572881, 0, 0, 1638417, 1, 0, 1638416, 1, 0, 1572880, 0, 0, 1507344, 0, 0, 1310735, 1, 0, 1245199, 1, 0, 1376271, 1, 0, 1441807, 1, 0, 1507343, 0, 0, 1572879, 0, 0, 1638415, 1, 0, 1638414, 1, 0, 1572878, 0, 0, 1638413, 1, 0, 1638412, 1, 0, 1638411, 0, 0, 1572869, 0, 0, 1572870, 1, 0, 1572871, 0, 0, 1507335, 0, 0, 1441799, 0, 0, 1376263, 0, 0, 1507336, 0, 0, 1441800, 0, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1507338, 0, 0, 1507337, 0, 0, 1507334, 1, 0, 1441798, 1, 0, 1376262, 0, 0, 1376261, 0, 0, 1310725, 0, 0, 1245189, 1, 0, 1376260, 0, 0, 1441796, 1, 0, 1507332, 0, 0, 1507333, 0, 0, 1441797, 1, 0, 1572868, 0, 0, 1310724, 0, 0, 1245188, 1, 0, 1310723, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 1507331, 0, 0, 1572867, 0, 0, 1245187, 1, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1310734, 0, 0, 1245201, 1, 0, 1245202, 1, 0, 1310737, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1376275, 0, 0, 1441810, 1, 0, 1441809, 0, 0, 1245205, 1, 0, 1245206, 0, 0, 1245204, 0, 0, 1310738, 0, 0, 1245203, 0, 0, 1310741, 0, 0, 1376276, 0, 0, 1441811, 1, 0, 1245207, 0, 0, 1310742, 0, 0, 1376277, 0, 0, 1441812, 1, 0, 1376278, 0, 0, 1310743, 0, 0, 1245208, 1, 0, 1441813, 1, 0, 1507348, 0, 0, 1507347, 0, 0, 1572882, 0, 0, 1441814, 0, 0, 1376279, 0, 0, 1507346, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1507349, 0, 0, 1441815, 0, 0, 1507350, 0, 0, 1638418, 1, 0, 1638419, 0, 0, 1638420, 0, 0, 1572885, 0, 0, 1507351, 0, 0, 1507352, 1, 0, 1441816, 1, 0, 1572886, 0, 0, 1441817, 1, 0, 1376282, 0, 0, 1376281, 0, 0, 1376280, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1245209, 1, 0, 1245210, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245211, 1, 0, 1310748, 0, 0, 1310749, 1, 0, 1376285, 1, 0, 1441821, 1, 0, 1507357, 1, 0, 1507356, 0, 0, 1572893, 1, 0, 1638429, 1, 0, 1638428, 1, 0, 1638427, 1, 0, 1638426, 0, 0, 1638425, 0, 0, 1638423, 0, 0, 1638422, 0, 0, 1638421, 1, 0, 1638424, 1, 0, 1572888, 1, 0, 1572887, 0, 0, 1572889, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572890, 0, 0, 1507353, 0, 0, 1441818, 1, 0, 1441819, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1441820, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 458771, 0, 0, 2031616, 1, 0, 2031617, 1, 0, 2031618, 1, 0, 2031619, 1, 0, 2031620, 1, 0, 2031621, 1, 0, 2031622, 1, 0, 2031623, 1, 0, 2031624, 1, 0, 2031625, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2031628, 1, 0, 2031629, 1, 0, 2031630, 1, 0, 2031631, 1, 0, 2031632, 1, 0, 2031633, 1, 0, 2031634, 1, 0, 2031635, 1, 0, 2031636, 1, 0, 2031637, 1, 0, 2031638, 1, 0, 2031639, 1, 0, 2031640, 1, 0, 2031641, 1, 0, 2031642, 1, 0, 2031643, 1, 0, 2031644, 1, 0, 2031645, 1, 0, 2031646, 1, 0)

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(491.5, 497)
scale = Vector2(1.14375, 1.27)
texture = ExtResource("5_bxmpt")

[node name="ghost" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_3t1wt")]
modulate = Color(1, 0, 1, 1)
position = Vector2(441, 477)
target = NodePath("../Traget")

[node name="ghost2" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_3t1wt")]
modulate = Color(1, 0, 1, 1)
position = Vector2(506, 476)
target = NodePath("../Traget2")

[node name="ghost3" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_3t1wt")]
modulate = Color(1, 1, 0, 1)
position = Vector2(476, 479)
target = NodePath("../Traget3")

[node name="ghost4" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_3t1wt")]
modulate = Color(1, 0.752941, 0.796078, 1)
position = Vector2(544, 478)
target = NodePath("../Traget4")

[node name="Traget" type="Node2D" parent="."]
position = Vector2(538, 629)

[node name="Traget2" type="Node2D" parent="."]
position = Vector2(735, 762)

[node name="Traget3" type="Node2D" parent="."]
position = Vector2(583, 294)

[node name="Traget4" type="Node2D" parent="."]
position = Vector2(127, 464)

[node name="cheese" parent="." instance=ExtResource("6_vf11b")]
position = Vector2(890, 180)

[node name="cheese2" parent="." instance=ExtResource("6_vf11b")]
position = Vector2(894, 910)

[node name="cheese3" parent="." instance=ExtResource("6_vf11b")]
position = Vector2(98, 928)

[node name="cheese4" parent="." instance=ExtResource("6_vf11b")]
position = Vector2(114, 186)

[node name="pacman" parent="." node_paths=PackedStringArray("targets") instance=ExtResource("7_epngo")]
position = Vector2(894, 910)
targets = [NodePath("../cheese"), NodePath("../cheese2"), NodePath("../cheese3"), NodePath("../cheese4")]
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 51.0001
offset_top = 252.0
offset_right = 143.0
offset_bottom = 278.0
scale = Vector2(10, 10)
text = "Victory"

[node name="Victory" type="Sprite2D" parent="."]
visible = false
position = Vector2(506, 453)
scale = Vector2(1.59125, 1.46875)
texture = ExtResource("9_bp6hj")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 444.0
offset_top = 567.0
offset_right = 571.0
offset_bottom = 637.0
disabled = true
text = "Restart"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
